fix product margin bug ( not showing the shadow in carousel)

--- a/src/containers/product/product.scss
+++ b/src/containers/product/product.scss
@@ -6,6 +6,7 @@
     box-shadow: 0 12px 26px #8d8dd610;
     background: #fff;
     cursor: pointer;
+    margin: 40px 0;
 
     &__content {
         padding: 20px;
